Docs: add success response
